# piclone

./: .gitignore  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  autogen.sh  backup  config.h.in  configure  configure.ac  meson.build  piclone.pc.in
data/: Makefile  Makefile.am  Makefile.in  meson.build  piclone.desktop  piclone.desktop.in  piclone.ui  pwdpic.sh
debian/: README.source  changelog  control  copyright  files  init.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  piclone.cron.d.ex  piclone.default.ex  piclone.doc-base.EX  piclone.install  piclone.postinst  piclone.substvars  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  watch.ex
debian/piclone/DEBIAN/: control  md5sums
debian/piclone/usr/share/doc/piclone/: README.Debian
debian/piclone/usr/share/locale/en_GB/LC_MESSAGES/: piclone.mo
po/: LINGUAS  Makefile  Makefile.in  POTFILES  POTFILES.in  de.po  en_GB.gmo  en_GB.po  hy.po  it.po  ko.po  linggen  meson.build  nb.po  piclone.pot  sk.po  zh_CN.po
src/: Makefile  Makefile.am  Makefile.in  backup  meson.build  piclone.c
